# Navigator-windows

./: .gitignore  Cargo.toml  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml
Agent/diagnostics/: hap-parity-audit.md
Agent/workflow/: 00-overview.md  01-architecture.md  02-folder-structure.md  03-modules.md  04-build-order.md  05-performance-strategy.md  06-windows-apis.md  07-rendering-strategy.md  08-hint-generation.md  09-input-handling.md  10-milestones.md  11-legacy-migration.md  12-benchmarking.md  13-configuration.md  14-risks-and-decisions.md  README.md  m9-acceptance.md
crates/nav-app/: Cargo.toml  app.manifest  build.rs
crates/nav-app/src/: logging.rs  main.rs  single_instance.rs  tray.rs
crates/nav-bench/: Cargo.toml
crates/nav-bench/benches/: enumerate_synth.rs  filter.rs  label.rs  planner.rs  session.rs
crates/nav-config/: Cargo.toml
crates/nav-config/src/: lib.rs
crates/nav-core/: Cargo.toml
crates/nav-core/src/: anchor.rs  dedupe.rs  error.rs  filter.rs  geom.rs  hint.rs  label.rs  lib.rs  planner.rs  session.rs  uia_debug.rs
crates/nav-core/tests/: label_proptest.rs  session_alloc.rs  session_fsm.rs  session_stress.rs
crates/nav-input/: Cargo.toml
crates/nav-input/src/: chord.rs  focus.rs  hotkey.rs  lib.rs  stub.rs  thread.rs
crates/nav-render/: Cargo.toml
crates/nav-render/src/: d2d.rs  device.rs  error.rs  lib.rs  monitors.rs  overlay.rs  scene.rs
crates/nav-uia/: Cargo.toml
crates/nav-uia/src/: cache.rs  click.rs  coords.rs  diagnose.rs  enumerate.rs  error.rs  fallback_hwnd.rs  fallback_msaa.rs  hwnd.rs  invoke.rs  lib.rs  options.rs  pattern.rs  profile.rs  runtime.rs  strategy.rs
crates/nav-uia/tests/: m9_acceptance.rs
crates/workspace-stub/: Cargo.toml
crates/workspace-stub/src/: lib.rs
legacy/: .gitignore-legacy  README.md
tools/git-hooks/: pre-commit
user-space/: README.txt  package.ps1
