[workspace]
resolver = "2"
members = [
    "crates/nav-core",
    "crates/nav-bench",
    "crates/nav-input",
    "crates/nav-app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal (add path crates as they land; see Agent/workflow/02-folder-structure.md)
nav-core = { path = "crates/nav-core" }
nav-input = { path = "crates/nav-input" }

# External — versions pinned via Cargo.lock; bump deliberately.
windows = "0.59"
windows-core = "0.59"
parking_lot = "0.12"
crossbeam-channel = "0.5"
rayon = "1.10"
smallvec = "1.13"
ahash = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
once_cell = "1.20"
proptest = "1.8"
dhat = "0.3"

# Bench-only
criterion = "0.5"

# Windows exe manifest / VERSIONINFO (nav-app build.rs)
winres = "0.1"
