[package]
name = "nav-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Navigator Windows executable — orchestration and lifecycle."
build = "build.rs"

[[bin]]
name = "navigator"
path = "src/main.rs"

[dependencies]
crossbeam-channel = { workspace = true }
nav-config = { workspace = true }
nav-core = { workspace = true }
nav-input = { workspace = true }
nav-uia = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(windows)'.dependencies]
nav-render = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Performance",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
winres = { workspace = true }
