[package]
name = "nav-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "TOML configuration for Navigator (Phase A4 / M10 foundation)."

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
