[package]
name = "nav-input"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Global hotkeys and (later) hint-mode keyboard capture for Navigator."

[dependencies]
crossbeam-channel = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
