[package]
name = "nav-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Per-monitor layered overlay for Navigator (D2D/DComp in later phases)."

[dependencies]
nav-core = { workspace = true }
thiserror = { workspace = true }
crossbeam-channel = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
