[package]
name = "nav-uia"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "UI Automation client for Navigator (enumeration, patterns, coordinates)."

[dependencies]
nav-core = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(windows)'.dependencies]
rayon = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Performance",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }
